<resources>
    <string name="app_name">WeatherWise</string>
    <string name="TextViewSunny">Сонячно</string>
    <string name="TextViewSaturday">Субота 30 грудня | 12:00</string>
    <string name="TextViewRain">Дощ</string>
    <string name="TextViewWindy">Вітер</string>
    <string name="TextViewHumidity">Вологість</string>
    <string name="TextViewYesterday">Сьогодні</string>
    <string name="BtnNext7Days">Наступні  7 днів > </string>
    <string name="title_activity_main_dnipro">ActivityMainDnipro</string>
    <string name="TextViewTomorrow">Завтра</string>
    <string name="TextViewMostlyCloudy">Переважно хмарно</string>
    <string name="TextViewLoginRegistration">Вхід / Реєстрація</string>
    <string name="TextViewEnterEmail">Введіть  E-mail</string>
    <string name="TextViewAccount">Акаунт</string>
    <string name="TextViewForgotPassword">Восстановити пароль</string>
    <string name="TextViewLanguage">Мова</string>
    <string name="TextViewLoggout">Увійти</string>
    <string name="TextViewEnterPsw">Введіть Пароль</string>
    <string name="EditTextPsw">Пароль</string>
    <string name="BtnLogin">Увійти</string>
    <string name="BtnRegistration">Реєстрація</string>
    <string name="ChecBox">Запам\'ятати мене</string>
    <string name="TextViewEnterSurnName">Введіть Ім\'я та Прізвище</string>
    <string name="EditTextSurnName">Ім\'я та Прізвище</string>
    <string name="TextViewRegistration">Реєстрація</string>
    <string name="TextViewReturnPsw">Введіть повторно пароль</string>
    <string name="TextViewCity">Введіть місто</string>
    <string name="EditTextCity">Місто</string>
    <string name="TextViewCountryCode">Введіть Код країни</string>
    <string name="EditTextCountryCode">Код країни</string>
    <string name="TextViewResetPassword" translatable="false">Восстановить пароль</string>
    <string name="TextViewDnipro" translatable="false">Дніпро</string>
    <string name="TextViewOdessa" translatable="false">Одеса</string>
    <string name="TextViewWindyText" translatable="false">Вітряно</string>
    <string name="TextViewTuesday" translatable="false">Вівторок 9 грудня | 12:00</string>
    <string name="TextViewStatus" translatable="false">Статус </string>
    <string name="TextViewDay" translatable="false">День</string>
    <string name="TextViewRainStorm" translatable="false">Дощ з грозою</string>
    <string name="TextViewKiev" translatable="false">Київ</string>
    <string name="TextViewSnow" translatable="false">Сніг</string>


</resources>