<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/weathermain"
    tools:context=".LoginActivity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">



        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/BtnBackLogin"
            android:background="@drawable/iconback"
            android:layout_marginTop="20dp"/>


    </RelativeLayout>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_white"
        android:layout_margin="30dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center_horizontal">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/TextViewLoginRegistration"
                   android:hint="@string/TextViewLoginRegistration"
                   android:textSize="25sp"
                   android:textAlignment="center"
                   android:textColorHint="@color/black"/>



                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/ImageViewEmail"
                    android:background="@drawable/iconaccount"
                    android:layout_below="@id/TextViewLoginRegistration"
                    android:layout_marginTop="40dp"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewEnterEmail"
                    android:hint="@string/TextViewEnterEmail"
                    android:layout_below="@id/TextViewLoginRegistration"
                    android:textSize="20sp"
                    android:textColorHint="@color/black"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EditTextEmail"
                    android:text="E-mail"
                    android:layout_below="@id/TextViewEnterEmail"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"/>



                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/ImageViewPsw"
                    android:background="@drawable/pswicon"
                    android:layout_below="@id/EditTextEmail"
                    android:layout_marginTop="40dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewEnterPsw"
                    android:hint="@string/TextViewEnterPsw"
                    android:textSize="20sp"
                    android:textColorHint="@color/black"
                    android:layout_below="@id/EditTextEmail"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/EditTextPsw"
                    android:hint="@string/EditTextPsw"
                    android:textSize="20sp"
                    android:layout_below="@id/TextViewEnterPsw"
                    android:textColorHint="@color/black"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"/>


                <CheckBox
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/ChecBoxLogin"
                    android:text="Запам'ятати мене"
                    android:layout_below="@id/EditTextPsw"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TextViewChecBox"
                    android:hint="@string/ChecBox"
                    android:textSize="20sp"
                    android:layout_below="@id/EditTextPsw"
                    android:textColorHint="@color/black"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="10dp"/>




                <Button
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:hint="@string/BtnLogin"
                    android:textColorHint="@color/white"
                    android:id="@+id/BtnLogin"
                    android:background="@drawable/background_blue"
                    android:layout_below="@id/EditTextPsw"
                    android:layout_marginTop="60dp"/>


                <Button
                    android:layout_width="110dp"
                    android:layout_height="30dp"
                    android:id="@+id/BtnRegistration"
                    android:background="@drawable/background_blue"
                    android:layout_below="@id/EditTextPsw"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="60dp"
                    android:hint="@string/BtnRegistration"
                    android:textColorHint="@color/white"/>


            </RelativeLayout>








        </LinearLayout>



    </androidx.cardview.widget.CardView>





</LinearLayout>