<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather"
    tools:context=".Activities.ActivityMainDnipro">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    
    
    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">
        
        
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="8dp">

       <Button
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:id="@+id/BtnGeolocation"
           android:background="@drawable/geolocation"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"/>


       <Button
           android:layout_width="25dp"
           android:layout_height="25dp"
           android:id="@+id/BtnSettings"
           android:background="@drawable/iconsettings"
           android:layout_marginLeft="350dp"
           android:layout_marginTop="10dp"/>


   </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewSunnyDnipro"
                android:hint="@string/TextViewSunny"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                android:textAlignment="center"/>



            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/ImageViewCloudy"
                android:background="@drawable/cloudyicon"
                android:layout_marginLeft="130dp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewSaturdayDnipro"
                android:hint="@string/TextViewSaturday"
                android:textSize="20sp"
                android:textColorHint="@color/white"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewDegreeDnipro"
                android:text="6°"
                android:textSize="55sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_color"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImageViewRain"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/rainicon" />

                    <TextView
                        android:id="@+id/TextViewDegreeRainDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:text="72%"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/TextViewRainDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:hint="@string/TextViewRain"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImageViewWindyDnipro"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/iconwindy" />

                    <TextView
                        android:id="@+id/TextViewDegreeWindyDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:text="3 M/C"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/TextViewWindyDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:hint="@string/TextViewWindy"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImageViewHumidity"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/humidityicon" />

                    <TextView
                        android:id="@+id/TextViewDegreeHumidityDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:text="79%"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/TextViewHumidityDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:hint="@string/TextViewHumidity"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent">


               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:id="@+id/TextViewYesterday"
                   android:hint="@string/TextViewYesterday"
                   android:textSize="20sp"
                   android:textColorHint="@color/white"
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="10dp"/>



               <Button
                   android:layout_width="120dp"
                   android:layout_height="40dp"
                   android:id="@+id/BtnNext7Days"
                   android:layout_marginLeft="300dp"
                   android:background="@null"
                   android:hint="@string/BtnNext7Days"
                   android:textSize="15sp"
                   android:textColorHint="@color/white"
                   android:layout_marginTop="5dp"/>
           </RelativeLayout>


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:id="@+id/RecyClerView"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        </LinearLayout>


    
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>